--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 tensorflow = "^2.16.1"
+tensorflow-datasets = "4.7.0"
 
 
 [build-system]
